# fgo-core

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
fgo_sdk/: __init__.py
fgo_sdk/client/: __init__.py  auth.py  fgo_client.py
fgo_sdk/models/: __init__.py  battle_data.py  config.py  gacha_data.py  game_data.py  player_data.py  request_data.py  shop_data.py
fgo_sdk/services/: __init__.py  battle.py  follower.py  gacha.py  item.py  login.py  present.py  shop.py
fgo_sdk/utils/: __init__.py  battle_crypto.py  crypto.py  gacha_helper.py  time_tool.py  version_helper.py  wiki_api.py
