[project]
name = "fgo-sdk"
version = "0.0.2"
description = "Python SDK for Fate/Grand Order API communication and data parsing"
authors = [
    {name = "Zhen-Bo"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["fgo", "fate-grand-order", "sdk", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "cryptography (>=41.0.0)",
    "msgpack (>=1.1.2,<2.0.0)",
    "py3rijndael (>=0.3.3,<0.4.0)",
    "pydantic (>=2.0.0)"
]

[project.urls]
Homepage = "https://github.com/Zhen-Bo/fgo-core"
Repository = "https://github.com/Zhen-Bo/fgo-core"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "fgo_sdk"}]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"

